--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -71,7 +71,7 @@
 
 .bodyGallery {
     background-color: white;
-    padding-bottom: 50%;
+    padding-bottom: 44%;
 
 }
 
@@ -79,18 +79,18 @@
     background-color: #1F1F1F;
     float: left;
     width: 35%;
-    margin-left: 10%;
-    margin-bottom: 2%;
-    margin-top: 2%;
+    margin-left: 14%;
+    margin-bottom: 1%;
+    margin-top: 1%;
 }
 
 .itemD {
     background-color: #1F1F1F;
     float: right;
     width: 35%;
-    margin-right: 10%;
-    margin-bottom: 2%;
-    margin-top: 2%;
+    margin-right: 14%;
+    margin-bottom: 1%;
+    margin-top: 1%;
 }
 
 .itemfs {
@@ -104,5 +104,26 @@
     margin-bottom: 5%;
     margin-left: 5%;
     margin-right: 5%;
+    float: left;
 
+}
+
+.title {
+    font-size: 170%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
+.description{
+    font-size: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+
+}
+
+.price {
+    font-size: 170%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    float: right;
+    margin-right: 2%;
 }
