--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,50 +1,166 @@
 #topBar {
     margin-left: 1%;
     padding-bottom: 2%;
+    background-color: wheat;
 }
 
-#searchBarInput {
-    margin-left: 20%;
-    padding-bottom: 1%;
-    padding-right: 20%;
+.logo {
+    margin-top: 1%;
+    margin-left: 1%;
+}
+
+.divTop {
+    margin-top: -3%;
+}
+
+.logotop {
+    position: absolute;
+    margin: auto;
+    left: 0;
+    margin-left: 1%;
+}
+
+.topBarCarrousel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    height: 15%;
+}
+
+.textCarrousel {
+    margin-right: 10%;
+}
+
+.imgCassousel {
+    width: 300px;
+    height: 300px;
+    border-radius: 15%;
+    vertical-align: center;
+}
+
+.internalDivCarrousel {
+    width: 20%;
+    margin-right: 2%;
+    margin-left: 2%;
+    justify-content: center;
+    vertical-align: middle;
+    align-items: center;
+
+}
+
+.divCarrousel {
+    margin-top: 12%;
+    text-align: center;
+    vertical-align: middle;
+    justify-content: center;
+    line-height: normal;
+    display: flex;
+
+}
+
+.searchBarInput {
+    margin-top: -400%;
+    padding-bottom: 10%;
+    padding-top: 10%;
+    padding-right: 150%;
+    padding-left: 10%;
     border: 30%;
     background-color: #F1F7EE;
     opacity: 50%;
-    border: 5px black;
+    border-radius: 250px;
+    font-size: large;
+    align-items: center;
+
+
 }
 
-#id {
-    background-image: url("imagens/PHOTO_CARROUSEL.jpg");
-    width: 100px;
-    /*width of your image*/
-    height: 100px;
-    /*height of your image*/
-}
-
-#carrousel {
-    height: 50%;
-    width: 100%;
+.header {
+    background-image: url("/imagens/PHOTO_CARROUSEL.jpg");
+    height: auto;
+    justify-content: center;
+    padding-bottom: 25%;
+    padding-top: 4%;
 }
 
 #titleCarrousel {
-    margin-top: -35%;
-    margin-left: 35%;
+    /* adicionada largura maxima para o texto nao exceder a imagem */
     color: #F1F7EE;
+    margin: auto;
     font-size: 300%;
-    font-family: 'Courier New', Courier, monospace;
-
+    font-weight: bold;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-#barSelection {
-    padding: 17%;
+
+
+.barSelection {
     background-color: #1F1F1F;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    text-align: inherit;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+
+}
+
+.divIconsTop {
+    display: block;
+    position: absolute;
+    right: 0;
+    margin: auto;
+    margin-right: 4%;
+}
+
+.subDiv-topBtn {
+    display: flex;
+    margin-top: 1%;
 }
 
 
+.divSearchBar {
+    display: block;
+    position: absolute;
+    left: 10%;
+    right: 27%;
+    max-width: 12%;
+    margin: auto;
+}
+
+.itemSelection {
+    background-color: transparent;
+    border-color: transparent;
+    text-align: center;
+    color: white;
+    margin-left: 3%;
+    margin-right: 3%;
+    font-size: 200%;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bolder;
+}
 
 #footer {
     background-color: #1F1F1F;
-    padding-bottom: 20%;
+}
+
+.arrowButton {
+    background-color: transparent;
+    border: transparent;
+    float: right;
+}
+
+.arrowButton {
+    background-color: transparent;
+    border: transparent;
+    float: left;
+}
+
+.buttonForm {
+    width: 30%;
+    margin-top: 5%;
+
+
 }
 
 #backgroundItem {
@@ -71,30 +187,28 @@
 
 .bodyGallery {
     background-color: white;
-    padding-bottom: 44%;
-
+    justify-content: center;
+    display: flex;
 }
 
 .itemE {
     background-color: #1F1F1F;
-    float: left;
+    justify-content: left;
     width: 35%;
     margin-left: 14%;
     margin-bottom: 1%;
     margin-top: 1%;
+    margin-right: 1%
 }
 
 .itemD {
     background-color: #1F1F1F;
-    float: right;
+    justify-content: right;
     width: 35%;
     margin-right: 14%;
     margin-bottom: 1%;
     margin-top: 1%;
-}
-
-.itemfs {
-    float: right;
+    margin-left: 1%;
 }
 
 #imagemDestaque {
@@ -105,25 +219,77 @@
     margin-left: 5%;
     margin-right: 5%;
     float: left;
-
 }
 
 .title {
     font-size: 170%;
     font-family: Arial, Helvetica, sans-serif;
-    color: white;
+    color: goldenrod;
+    text-align: right;
+    margin-right: 5%;
 }
-.description{
+
+.description {
     font-size: 100%;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-
+    margin-top: 5%;
+    text-align: right;
+    margin-right: 5%;
 }
 
 .price {
-    font-size: 170%;
+    font-size: 150%;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
+    text-align: right;
+    margin-right: 5%;
+    margin-top: 35%;
+}
+
+.topBottom {
+    border: 300px wheat;
+}
+
+.iconTopImage {
+    background-size: 102%;
+    width: 75px;
+    height: 75px;
+    border-color: white;
+}
+
+.iconTopLink {
+    display: flex;
+    align-items: center;
+    margin-left: 15%;
+}
+
+.titleFooter {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: white;
+    margin-left: 2%;
+    font-size: 250%;
+}
+
+.textFooter {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 117%;
+    color: white;
+}
+
+.footer {
+    display: flex;
+    padding-bottom: 2%;
+}
+
+.qrcodeFooter {
+    max-width: 30%;
+    justify-content: right;
     float: right;
-    margin-right: 2%;
+    margin-right: 10%;
+}
+
+.divFooter {
+    margin-right: 30%;
+    margin-left: 3%;
 }
