--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,12 +1,14 @@
 #topBar {
     margin-left: 1%;
     padding-bottom: 2%;
-    background-color: wheat;
+    background-color: white;
 }
 
 .logo {
     margin-top: 1%;
-    margin-left: 1%;
+    margin-left: 10%;
+    max-width: 90%;
+
 }
 
 .divTop {
@@ -17,7 +19,8 @@
     position: absolute;
     margin: auto;
     left: 0;
-    margin-left: 1%;
+    margin-left: 2%;
+    max-width: 30%;
 }
 
 .topBarCarrousel {
@@ -33,11 +36,21 @@
 }
 
 .imgCassousel {
-    width: 300px;
-    height: 300px;
+    max-width: 25%;
     border-radius: 15%;
     vertical-align: center;
+    border-image-width: 1vh;
+    -webkit-filter: grayscale(75%);
+    -webkit-transition: all 0.5s;
 }
+
+.imgCassousel:hover {
+    -webkit-filter: grayscale(0%);
+    box-shadow: 0 4px 15px 0 rgb(61, 61, 61);
+    max-width: 26%;
+}
+
+
 
 .internalDivCarrousel {
     width: 20%;
@@ -53,10 +66,9 @@
     margin-top: 12%;
     text-align: center;
     vertical-align: middle;
-    justify-content: center;
     line-height: normal;
     display: flex;
-
+    justify-content: center;
 }
 
 .searchBarInput {
@@ -71,28 +83,45 @@
     border-radius: 250px;
     font-size: large;
     align-items: center;
+    -webkit-transition: 0.3s;
+}
+
+.searchBarInput:hover {
+    padding-right: 160%;
+    padding-left: 15%;
 
 
 }
 
 .header {
     background-image: url("../imagens/PHOTO_CARROUSEL.jpg");
-    height: auto;
     justify-content: center;
     padding-bottom: 25%;
     padding-top: 4%;
+    background-size: cover;
+    margin-bottom: -1%;
 }
 
 #titleCarrousel {
     /* adicionada largura maxima para o texto nao exceder a imagem */
     color: #F1F7EE;
+    text-align: right;
+    overflow-wrap: break-word;
     margin: auto;
     font-size: 300%;
     font-weight: bold;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-
+.DescCarrousel {
+    color: white;
+    opacity: 50%;
+    text-align: right;
+}
+.divTextCarrousel{
+    vertical-align: middle;
+    margin-top: 5%;
+    
+}
 
 .barSelection {
     background-color: #1F1F1F;
@@ -110,6 +139,7 @@
     right: 0;
     margin: auto;
     margin-right: 6%;
+    max-width: 30%;
 }
 
 .subDiv-topBtn {
@@ -122,7 +152,7 @@
     display: block;
     position: absolute;
     left: 10%;
-    right: 27%;
+    right: 30%;
     max-width: 12%;
     margin: auto;
 }
@@ -134,9 +164,13 @@
     color: white;
     width: 20%;
     font-size: 200%;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bolder;
+    -webkit-transition: all 0.2s;
+}
 
+.itemSelection:hover {
+    border-color: white;
+    border-style: dashed;
 }
 
 #footer {
@@ -197,7 +231,8 @@
     margin-left: 14%;
     margin-bottom: 1%;
     margin-top: 1%;
-    margin-right: 1%
+    margin-right: 1%;
+    -webkit-transition: all 0.5s;
 }
 
 .itemD {
@@ -208,11 +243,18 @@
     margin-bottom: 1%;
     margin-top: 1%;
     margin-left: 1%;
+    -webkit-transition: all 0.5s;
+
+}
+
+#itemDestaque:hover {
+    size: 10%;
+    box-shadow: 0 4px 15px 0 rgb(255, 170, 0);
+    background-color: #121212;
 }
 
 #imagemDestaque {
-    height: 300px;
-    width: 300px;
+    max-width: 50%;
     margin-top: 5%;
     margin-bottom: 5%;
     margin-left: 5%;
@@ -220,9 +262,9 @@
     float: left;
 }
 
+
 .title {
     font-size: 170%;
-    font-family: Arial, Helvetica, sans-serif;
     color: goldenrod;
     text-align: right;
     margin-right: 5%;
@@ -230,16 +272,16 @@
 
 .description {
     font-size: 100%;
-    font-family: Arial, Helvetica, sans-serif;
     color: white;
     margin-top: 5%;
     text-align: right;
     margin-right: 5%;
+    overflow-wrap: break-word;
+    inline-size: 90%;
 }
 
 .price {
     font-size: 150%;
-    font-family: Arial, Helvetica, sans-serif;
     color: white;
     text-align: right;
     margin-right: 5%;
@@ -247,14 +289,20 @@
 }
 
 .topBottom {
-    border: 300px wheat;
+    border: 300px white;
 }
+
 
 .iconTopImage {
     background-size: 102%;
-    width: 75px;
-    height: 75px;
+    max-width: 90%;
     border-color: white;
+    -webkit-transition: all 0.5s;
+}
+
+.iconTopImage:hover {
+    transition: 0.2s;
+    max-width: 95%;
 }
 
 .iconTopLink {
@@ -264,14 +312,12 @@
 }
 
 .titleFooter {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: white;
     margin-left: 2%;
     font-size: 250%;
 }
 
 .textFooter {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 117%;
     color: white;
 }
@@ -297,6 +343,12 @@
     background-color: transparent;
     border: transparent;
     width: 15%;
+    -webkit-transition: 0.3s;
+
+}
+
+.buttonSocial:hover {
+    width: 17%
 }
 
 .allSocialBtn {
@@ -307,4 +359,10 @@
 
 .imagemSocial {
     width: 40%;
+}
+
+
+
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
